# AndriodApp

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/zimeng/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: matrixtest.cpp  native-lib.cpp
app/src/main/cpp/includes/: matrixtest.h
app/src/main/java/com/example/zimeng/myapplication/: MainActivity.java
app/src/main/res/raw/: linear.tflite
app/src/test/java/com/example/zimeng/myapplication/: ExampleUnitTest.java
